appId: org.navoss.mobile
---
- openLink: 'exp+navoss://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Open|Bundling.*|Search places|Close|Continue|Allow While Using App'
    timeout: 10000
- tapOn:
    text: 'Allow While Using App'
    optional: true
- runFlow:
    when:
      visible: 'Open'
    commands:
      - tapOn: 'Open'
- extendedWaitUntil:
    notVisible: 'Bundling.*'
    timeout: 60000
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- tapOn:
    text: 'Reload'
    optional: true
- tapOn:
    text: 'Allow While Using App'
    optional: true
- tapOn:
    text: 'Allow'
    optional: true
- extendedWaitUntil:
    visible: 'Continue|Search places'
    timeout: 20000
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- extendedWaitUntil:
    visible: 'Search places'
    timeout: 20000
- tapOn: 'Search places'
- eraseText
- inputText: 'Airport'
- extendedWaitUntil:
    visible: 'Select Calgary International Airport.*'
    timeout: 20000
- assertNotVisible: 'Current location unavailable'
